--- a/app/src/main/res/layout/event_model.xml
+++ b/app/src/main/res/layout/event_model.xml
@@ -29,6 +29,7 @@
             android:id="@+id/recent_title"
             android:text="TITLE"
             android:textSize="20sp"
+            android:textColor="#000"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"/>
