--- a/app/src/main/res/layout/fragment_navigation_sponcors.xml
+++ b/app/src/main/res/layout/fragment_navigation_sponcors.xml
@@ -16,6 +16,7 @@
         android:layout_marginVertical="10dp">
 
         <androidx.cardview.widget.CardView
+            app:cardElevation="7dp"
             app:cardCornerRadius="5dp"
             android:background="#fff"
             android:layout_width="match_parent"
@@ -42,7 +43,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/github"
+                android:src="@drawable/walmart"
                 android:padding="8dp"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -57,7 +58,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/mozila"
+                android:src="@drawable/mozilla"
                 android:padding="8dp"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -73,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="8dp"
-                android:src="@drawable/codingblocks"/>
+                android:src="@drawable/github"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -88,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="8dp"
-                android:src="@drawable/vedanta"/>
+                android:src="@drawable/codechef"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -103,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="8dp"
-                android:src="@drawable/codingninja"/>
+                android:src="@drawable/geeksforgeeks"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -118,7 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="8dp"
-                android:src="@drawable/teqip"/>
+                android:src="@drawable/hackerrank"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -133,7 +134,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="8dp"
-                android:src="@drawable/geeksforgeeks"/>
+                android:src="@drawable/hackerearth"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -147,7 +148,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/hackerearth"
+                android:src="@drawable/codingblocks"
                 android:padding="8dp"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -162,7 +163,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/devfolio"
+                android:src="@drawable/codingninjas"
                 android:padding="8dp"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -178,7 +179,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="8dp"
-                android:src="@drawable/techgig"/>
+                android:src="@drawable/skillenza"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -192,7 +193,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/foxmula"
+                android:src="@drawable/vedanta"
                 android:padding="8dp"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -208,7 +209,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:padding="8dp"
-                android:src="@drawable/codechef"/>
+                android:src="@drawable/devfolio"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             app:cardCornerRadius="5dp"
@@ -222,7 +223,37 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/skillenza"
+                android:src="@drawable/foxmula"
+                android:padding="8dp"/>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            app:cardCornerRadius="5dp"
+            android:background="#fff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:layout_margin="10dp"
+            android:id="@+id/cd15"
+            android:layout_below="@id/cd14">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:src="@drawable/teqip"
+                android:padding="8dp"/>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            app:cardCornerRadius="5dp"
+            android:background="#fff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical"
+            android:layout_margin="10dp"
+            android:id="@+id/cd16"
+            android:layout_below="@id/cd15">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:src="@drawable/techgig"
                 android:padding="8dp"/>
         </androidx.cardview.widget.CardView>
     </RelativeLayout>
